<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground" >

    <TextView
        android:id="@+id/backgroundCreateAccount"
        android:layout_width="330dp"
        android:layout_height="631dp"
        android:background="@drawable/backgroundboxshape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/textfieldCreateAccount"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toTopOf="@+id/backgroundCreateAccount" />

    <TextView
        android:id="@+id/textfieldCreateAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textfieldName"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccount" />

    <EditText
        android:id="@+id/inputTextCreateAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:accessibilityLiveRegion="none"
        android:background="@drawable/roundinputtextfield"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textfieldCreateAccountName" />

    <EditText
        android:id="@+id/inputTextCreateAccountLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundinputtextfield"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textfieldCreateAccountLastName" />

    <EditText
        android:id="@+id/inputTextCreateAccountRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundinputtextfield"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textfieldCreateAccountRegion" />

    <EditText
        android:id="@+id/inputTextCreateAccountEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundinputtextfield"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textfieldCreateAccountEmailAddress" />

    <EditText
        android:id="@+id/inputTextCreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundinputtextfield"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textfieldCreateAccountPassword" />

    <EditText
        android:id="@+id/inputTextCreateAccountConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundinputtextfield"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textfieldCreateAccountConfirmPassword" />

    <TextView
        android:id="@+id/textfieldCreateAccountLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textfieldLastName"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateAccountName" />

    <TextView
        android:id="@+id/textfieldCreateAccountRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textfielRegion"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateAccountLastName" />

    <TextView
        android:id="@+id/textfieldCreateAccountEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textfieldEmailAddress"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateAccountRegion" />

    <TextView
        android:id="@+id/textfieldCreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textfieldPassword"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateAccountEmailAddress" />

    <TextView
        android:id="@+id/textfieldCreateAccountConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textfieldConfirmPassword"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateAccountPassword" />

    <Button
        android:id="@+id/buttonCreateAccountNext"
        android:layout_width="143dp"
        android:layout_height="42dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/roundbutton"
        android:onClick="onNextClick"
        android:text="@string/buttonNext"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundCreateAccount"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateAccountConfirmPassword"
        app:layout_constraintVertical_bias="0.567" />

</androidx.constraintlayout.widget.ConstraintLayout>