...
        android:text="@string/buttonPlanYourTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeMessage" />

    <Button
        android:id="@+id/buttonCreateAnAccount"
        android:layout_width="305dp"
        android:layout_height="78dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/roundbutton"
        android:clickable="true"
        android:onClick="onRegisterNewUser"
...
